--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update
 RUN apt-get install -y vim
 RUN pip install --upgrade pip
 RUN pip install --upgrade setuptools
-RUN pip install django django-environ django-neomodel
+RUN pip install django django-environ django-neomodel pytz
